--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@babel/preset-typescript": "^7.0.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.9.4",
+    "@types/react": "*",
+    "@types/react-dom": "*",
     "babel-plugin-module-resolver": "^3.1.1",
     "jest": "^23.5.0",
     "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.0.3"
   },
   "dependencies": {},
@@ -55,5 +58,9 @@
     "moduleNameMapper": {
       "@source/(.*)": "<rootDir>/src/$1"
     }
+  },
+  "peerDependencies": {
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2"
   }
 }
