--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
     "target": "es5",
     "lib": [
       "es6",
-      "esnext"
+      "esnext",
+      "dom"
     ],
+    "jsx": "react",
     "sourceMap": true,
     "rootDir": "src",
     "declaration": true,
