--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": [ "@babel/preset-env", "@babel/preset-typescript" ],
+  "presets": [ ["@babel/preset-env", { "modules": false }], "@babel/preset-typescript" ],
   "plugins": [
     ["module-resolver", {
       "root": ["./lib"],
